# dosbox-staging

./: .gitattributes  .gitignore  COMPATIBILITY.md  INSTALL  README  README.md  acinclude.m4  check_fix_relocs.py  configure.ac  eatmem.asm  eatmem.com  fc.py  json2idc.py  meson.build  trace_stack_simplifier.py
src/custom/: Makefile.am  asm.h  asm_16.h  asm_32.h  asm_regs_decomp.h  circular_buffer.h  custom.cpp  custom_hooks.h  meson.build  segfault.cpp  shadowstack.cpp  utils.cpp  utils.h
src/custom/src/: Makefile  Makefile.am  Makefile.in  VIKINGS.EXE.map  _data.cpp  _data.h  cfix.exe.cpp  cfix.exe.h  cfix.exe_default_seg.cpp  cfix.exe_seg000.cpp  cfix.exe_seg001.cpp  cfix.exe_seg008.cpp  cfix.exe_seg015.cpp  detroit.exe.cpp  detroit.exe_default_seg.cpp  detroit.exe_seg003.cpp  detroit.exe_seg004.cpp  dnprgdrv.cpp  dnprgdrv.h  dnprgdrv_default_seg.cpp  dnprgdrv_seg000.cpp  dnprgdrv_seg002.cpp  dnprgdrv_seg003.cpp  dnprgdrv_seg004.cpp  dnprgdrv_seg005.cpp  f.exe.cpp  f.exe.h  f.exe_default_seg.cpp  f.exe_seg000.cpp  f.exe_seg001.cpp  f.exe_seg003.cpp  f.exe_seg004.cpp  f.exe_seg127c.cpp  f.exe_seg13dd.cpp  f.exe_seg1667.cpp  f.exe_seg2623.cpp  f.exe_seg35ab.cpp  f.exe_seg37ca.cpp  f.exe_seg3897.cpp  f.exe_seg48ae.cpp  (+14 more)
src/custom/src_aw/: _data.cpp  _data.h  init.cpp  vga.exe.cpp  vga.exe.h  vga.exe_default_seg.cpp  vga.exe_seg000.cpp
src/custom/src_blaster/: Makefile.am  _data.cpp  _data.h  blaster2_.cpp  blaster2_.h  init.cpp
src/custom/src_det/: detroit.exe.h  detroit.exe_seg000.cpp  detroit.exe_seg001.cpp  detroit.exe_seg002.cpp  detroit.exe_seg005.cpp  detroit.exe_seg006.cpp  meson.build
src/custom/src_dune/: Makefile.am  Makefile.in  _data.cpp  _data.h  dnprgdrv.cpp  dnprgdrv.h  dnprgdrv_default_seg.cpp  dnprgdrv_seg000.cpp  dnprgdrv_seg002.cpp  dnprgdrv_seg003.cpp  dnprgdrv_seg005.cpp  meson.build
src/custom/src_dune_wip/: _data.cpp  _data.h  dnprgdrv.cpp  dnprgdrv.h  dnprgdrv_default_seg.cpp  dnprgdrv_seg000.cpp  dnprgdrv_seg002.cpp  dnprgdrv_seg003.cpp  dnprgdrv_seg005.cpp  init.cpp
src/custom/src_f15/: _data.cpp  _data.h  f.exe.h  f.exe_default_seg.cpp  f.exe_seg1309.cpp  f.exe_seg2623.cpp  init.cpp  meson.build
src/custom/src_goody/: Makefile.am  _data.cpp  _data.h  goodym.cpp  goodym.h  init.cpp
src/custom/src_int8/: Makefile.am  _data.h  init.cpp  int8.cpp  int8.h
src/custom/src_iplay/: Makefile.am  init.cpp  iplay.cpp  iplay.h  iplay_default_seg.cpp  iplay_seg000.cpp  iplay_seg001.cpp
src/custom/src_lhx/: Makefile.am  _data.cpp  _data.h  init.cpp  lhx.cpp  lhx.h  lhx_default_seg.cpp  lhx_seg000.cpp  lhx_seg001.cpp  lhx_seg002.cpp  lhx_seg003.cpp  lhx_seg004.cpp  lhx_seg005.cpp  lhx_seg006.cpp  lhx_seg007.cpp  lhx_seg008.cpp  lhx_seg009.cpp  lhx_seg010.cpp  lhx_seg011.cpp  lhx_seg012.cpp  lhx_seg013.cpp  lhx_seg014.cpp  lhx_seg015.cpp  lhx_seg016.cpp  lhx_seg017.cpp  lhx_seg018.cpp  lhx_seg019.cpp  lhx_seg020.cpp  lhx_seg021.cpp  lhx_seg022.cpp  lhx_seg023.cpp  lhx_seg024.cpp  lhx_seg025.cpp  lhx_seg026.cpp  lhx_seg027.cpp  lhx_seg028.cpp  lhx_seg029.cpp  lhx_seg030.cpp  lhx_seg031.cpp  lhx_seg032.cpp
src/custom/src_qemutest/: Makefile.am  _data.cpp  _data.h  init.cpp  init.h  test-i386_conv.cpp
src/custom/src_restunts/: Makefile.am  _data.cpp  _data.h  game_drv_.cpp  game_drv_.h  game_drv__default_seg.cpp  game_drv__seg000.cpp  game_drv__seg001.cpp  game_drv__seg002.cpp  game_drv__seg003.cpp  game_drv__seg004.cpp  game_drv__seg005.cpp  game_drv__seg006.cpp  game_drv__seg007.cpp  game_drv__seg008.cpp  game_drv__seg009.cpp  game_drv__seg010.cpp  game_drv__seg011.cpp  game_drv__seg012.cpp  game_drv__seg013.cpp  game_drv__seg014.cpp  game_drv__seg015.cpp  game_drv__seg016.cpp  game_drv__seg017.cpp  game_drv__seg018.cpp  game_drv__seg019.cpp  game_drv__seg020.cpp  game_drv__seg021.cpp  game_drv__seg022.cpp  game_drv__seg023.cpp  game_drv__seg024.cpp  game_drv__seg025.cpp  game_drv__seg026.cpp  game_drv__seg027.cpp  game_drv__seg028.cpp  game_drv__seg029.cpp  game_drv__seg030.cpp  game_drv__seg031.cpp  game_drv__seg032.cpp  game_drv__seg033.cpp  (+6 more)
src/custom/src_restunts_sep/: _data.cpp  _data.h  game_drv_.cpp  game_drv_.h  game_drv__default_seg.cpp  game_drv__seg000.cpp  game_drv__seg001.cpp  game_drv__seg002.cpp  game_drv__seg003.cpp  game_drv__seg004.cpp  game_drv__seg005.cpp  game_drv__seg006.cpp  game_drv__seg007.cpp  game_drv__seg008.cpp  game_drv__seg009.cpp  game_drv__seg010.cpp  game_drv__seg011.cpp  game_drv__seg012.cpp  game_drv__seg013.cpp  game_drv__seg014.cpp  game_drv__seg015.cpp  game_drv__seg016.cpp  game_drv__seg017.cpp  game_drv__seg018.cpp  game_drv__seg019.cpp  game_drv__seg020.cpp  game_drv__seg021.cpp  game_drv__seg022.cpp  game_drv__seg023.cpp  game_drv__seg024.cpp  game_drv__seg025.cpp  game_drv__seg026.cpp  game_drv__seg027.cpp  game_drv__seg028.cpp  game_drv__seg029.cpp  game_drv__seg030.cpp  game_drv__seg031.cpp  game_drv__seg032.cpp  game_drv__seg033.cpp  game_drv__seg034.cpp  (+4 more)
src/custom/src_restunts_wip/: meson.build
src/custom/src_sab2/: Makefile.am  _data.cpp  _data.h  init.cpp  sab2.cpp  sab2.h  sab2_default_seg.cpp  sab2_seg000.cpp
src/custom/src_snake/: Makefile.am  _data.cpp  _data.h  init.cpp  meson.build  snake.cpp  snake.h  snake_default_seg.cpp  snake_seg001.cpp
src/custom/src_td3/: Makefile.am  _data.cpp  _data.h  init.cpp  meson.build  tdiii.cpp  tdiii.h  tdiii_default_seg.cpp  tdiii_seg000.cpp  tdiii_seg001.cpp  tdiii_seg002.cpp  tdiii_seg003.cpp  tdiii_seg004.cpp  tdiii_seg005.cpp  tdiii_seg006.cpp  tdiii_seg007.cpp  tdiii_seg008.cpp  tdiii_seg009.cpp  tdiii_seg010.cpp  tdiii_seg011.cpp  tdiii_seg012.cpp  tdiii_seg013.cpp  tdiii_seg014.cpp  tdiii_seg015.cpp  tdiii_seg016.cpp  tdiii_seg017.cpp  tdiii_seg018.cpp  tdiii_seg019.cpp  tdiii_seg020.cpp  tdiii_seg021.cpp  tdiii_seg022.cpp  tdiii_seg023.cpp  tdiii_seg024.cpp  tdiii_seg025.cpp  tdiii_seg026.cpp  tdiii_seg027.cpp  tdiii_seg028.cpp  tdiii_seg029.cpp  tdiii_seg030.cpp  tdiii_seg031.cpp  (+8 more)
src/custom/src_vikings/: vikings.exe.cpp  vikings.exe.h  vikings.exe_seg000.cpp  vikings.exe_seg002.cpp  vikings.exe_seg003.cpp
src/custom/src_zone/: Makefile.am  (+8 more)
(+134 files in other folders)
