AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -DDOSBOX -I../ -mno-ms-bitfields -Wno-multichar -Wno-address-of-packed-member -I/include/ncurses  -I. -L.  -ggdb3 -lSDL -std=c++11 -Wno-unused-variable  -Wno-strict-aliasing -Wno-narrowing -fpermissive -O2 # -O0 -DM2CM2CDEBUG=3

SUBDIRS = 

noinst_LIBRARIES = libsrc.a
libsrc_a_SOURCES = _data.cpp  _data.h init.cpp init.h  blaster2_.cpp  blaster2_.h

#EXTRA_DIST = schick.h

