AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -DDOSBOX -I../ -mno-ms-bitfields -Wno-multichar -Wno-address-of-packed-member -I/include/ncurses  -I. -L.  -ggdb3 -lSDL -std=c++11 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-strict-aliasing -Wno-narrowing -fpermissive -finline-limit=50 -ftime-report -DM2CDEBUG=4 # -v -Q

SUBDIRS = 

noinst_LIBRARIES = libsrc.a
libsrc_a_SOURCES = _data.cpp  _data.h init.cpp init.h  lhx.cpp  lhx.h lhx_seg000.cpp lhx_seg001.cpp lhx_seg002.cpp lhx_seg003.cpp lhx_seg004.cpp lhx_seg005.cpp lhx_seg006.cpp lhx_seg007.cpp lhx_seg008.cpp lhx_seg009.cpp lhx_seg010.cpp lhx_seg011.cpp lhx_seg012.cpp lhx_seg013.cpp lhx_seg014.cpp lhx_seg015.cpp lhx_seg016.cpp lhx_seg017.cpp lhx_seg018.cpp lhx_seg019.cpp lhx_seg020.cpp lhx_seg021.cpp lhx_seg022.cpp lhx_seg023.cpp lhx_seg024.cpp lhx_seg025.cpp lhx_seg026.cpp lhx_seg027.cpp lhx_seg028.cpp lhx_seg029.cpp lhx_seg030.cpp lhx_seg031.cpp lhx_seg032.cpp lhx_default_seg.cpp

#EXTRA_DIST = schick.h

