AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -DDOSBOX -I../ -O0 -mno-ms-bitfields -Wno-multichar -Wno-address-of-packed-member -I/include/ncurses  -I. -L.  -ggdb3 -lSDL -std=c++11 -Wno-unused-variable  -Wno-strict-aliasing -fpermissive -DM2CDEBUG

SUBDIRS = 

noinst_LIBRARIES = libsrc.a
libsrc_a_SOURCES = _data.cpp  _data.h init.cpp init.h  snake.cpp  snake.h

#EXTRA_DIST = schick.h

